Preloading images to avoid flicker on hover/press

--- a/css/app.less
+++ b/css/app.less
@@ -383,3 +383,14 @@
     }
   }
 }
+
+// For preloading
+body:after{
+  display:none;
+  content: url("water-button-hover.svg") url("water-button-press.svg") 
+    url("air-button-hover.svg") url("air-button-press.svg")
+    url("coconut-button-hover.svg") url("coconut-button-press.svg")
+    url("experiments-button-hover.svg") url("experiments-button-press.svg")
+    url("oil-soap-hover.svg") url("oil-soap-press.svg")
+    url("wood-stone-hover.svg") url("wood-stone-press.svg");
+}
